--- a/frbussupport.Rnw
+++ b/frbussupport.Rnw
@@ -83,6 +83,54 @@ Here we create the support file from the data.frame.
 write.csv(varinfo,"support/varinfo.csv")
 @
 
+
+\section{stdver{\_}coeffs.txt}
+
+<<>>=
+raw = readLines("frbus_package/mods/stdver_coeffs.txt")
+str(raw)
+@
+
+<<>>=
+coeffs = lapply(raw[which(raw!="" & raw!="theend")], function(x) strsplit(x, "\t"))
+coeffs = data.frame(
+           name = unlist(lapply(coeffs, function(x) x[[1]][1])),
+           len = as.numeric(lapply(coeffs, function(x) x[[1]][2])),
+           vec = unlist(lapply(coeffs, function(x) x[[1]][3])),
+             stringsAsFactors = FALSE)
+coeffs$vec = lapply(coeffs$vec, function(x) as.numeric(strsplit(x, ",")[[1]]))
+row.names(coeffs) = coeffs$name
+coeffs["y_emo","vec"]
+coeffs["y_emo","vec"][[1]][3]
+coeffs["y_emo","len"]
+length(coeffs["y_emo","vec"][[1]])
+@
+
+<<>>=
+# rownames(coeffs)
+# coeffs$vec
+# coeffs = subset(coeffs, select=c(vec))
+# str(coeffs)
+# coeffs["y_emo"]
+# coeffs$vec["y_emo"]
+@
+
+\section{stdver{\_}eqs.txt}
+
+<<>>=
+raw = readLines("frbus_package/mods/stdver_eqs.txt")
+raw2 = paste(raw[which(raw!="" & raw!="theend")], collapse="<endline>")
+raw3 = gsub(" *_<endline> *", " ", raw2)
+raw4 = gsub("[[:space:]]+", " ", raw3)
+raw5 = strsplit(raw4, "<endline>")
+raw6 = raw5[[1]]
+gsub(":.*$", "", raw6)
+raw6
+@
+
+<<>>=
+@
+
 \section{Chunks}
 \nowebchunks
 \section{Index}
